--- a/team.html
+++ b/team.html
@@ -28,8 +28,10 @@
             <h1 class="hero__title">Complex preparation for English UPE</h1>
             <p class="hero__text">
                <span class="hero__text--grey">It won&#8217;t be easy.</span>
+            <span class="hero__text--direction">
                <span class="hero__text--black"> But you are guaranteed to get </span>
-               <span class="hero__text--orange"> +25 points </span>
+               <span class="hero__text--accent"> +25 points </span>
+            </span>
             </p>
             <div class="hero__btn-wrapper">
                <button class="hero__btn" type="button">I want a free lesson</button>
