--- a/team.html
+++ b/team.html
@@ -33,8 +33,9 @@
                <span class="hero__text--accent"> +25 points </span>
             </span>
             </p>
-            <div class="hero__btn-wrapper">
-               <button class="hero__btn" type="button">I want a free lesson</button>
+            <div class="hero__link-wrapper">
+               <!-- <button class="hero__btn" type="button">I want a free lesson</button> -->
+               <a class="link hero__link" href="#">I want a free lesson</a>
             </div>
          </div>
          <picture class="hero__img">
